Add script functionnality

--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
     <script src="script.lua" />
 </head>
 <body>
-    <div class="wip-notice">
-        <h1 class="header">Welcome!</h1>
-        <h3 class="subheader">Online code editor</h3>
-        <h4>This site is still being built, please come back later!</h4>
-    </div>
+    <h1>Web Code Editor</h1>
+    <textarea id="codeInput" placeholder="Type your HTML code here..."></textarea>
+    <button id="runButton">Run</button>
+    <div id="output"></div>
 </body>
 </html>
