--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <h1>Web Code Editor</h1>
-    <textarea id="codeInput" placeholder="Type your HTML code here..."></textarea>
-    <button id="runButton">Run</button>
+    <textarea class="codeInput" placeholder="Type your HTML code here..."></textarea>
+    <button class="runButton">Run</button>
     <div id="output"></div>
 </body>
 </html>
