Rename 'id' to 'class' in the output div.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h1>Web Code Editor</h1>
     <textarea class="codeInput" placeholder="Type your HTML code here..."></textarea>
     <button class="runButton">Run</button>
-    <div id="output"></div>
+    <div class="output"></div>
 </body>
 </html>
